--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="ok">OK</string>
     <string name="change_address">Change Address</string>
     <string name="content_description_marker_image">marker image</string>
-    <string name="title_activity_alarm">AlarmActivity</string>
+    <string name="title_activity_alarm">My Alarms</string>
     <string name="action_settings">Settings</string>
     <string name="alias">Alias</string>
     <string name="ringtone">Ringtone</string>
@@ -28,7 +28,7 @@
     <string name="snooze">Snooze</string>
     <string name="done_snoozing">Done snoozing</string>
     <string name="alarm_set_for">Alarm set for %1$s from now.</string>
-    <string name="geo_alarm_set_for">Alarm set for %1$d %2$s from you.</string>
+    <string name="geo_alarm_set_for">Alarm scheduled.</string>
     <!-- ======================================================================================= -->
 
     <!-- ==================================== TOASTS ==================================== -->
@@ -70,7 +70,7 @@
     <string name="abbrev_less_than_one_minute">&lt;1m</string>
 
     <string name="upcoming_alarm_dismissed">%1$s alarm dismissed.</string>
-    <string name="upcoming_geo_alarm_dismissed">%f alarm dismissed.</string>
+    <string name="upcoming_geo_alarm_dismissed">Alarm dismissed.</string>
 
     <!-- ======================================================================================= -->
 
@@ -231,5 +231,8 @@
     <string name="error_template">Error occurred when: %1$s, ERROR_CODE: %2$d</string>
     <string name="dismiss_today">Cancel for Today</string>
     <string name="skip">Skip</string>
+    <string name="next">NEXT</string>
+    <string name="location_update_error_message">The app requires the GPS Location to be enabled. It is also recommended to use High Accuracy location for best performance.</string>
+    <string name="once">Once</string>
 
 </resources>
