alarmiko 1.0 added content provider

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,5 +241,9 @@
     <string name="distance_template">in %1$d meters</string>
     <string name="schedule_now">Schedule Now</string>
     <string name="no_alarms">No Alarms Added</string>
+    <string name="launcher_icon">Launcher icon</string>
+    <string name="menu_button">Menu Button</string>
+    <string name="location_button">My location button</string>
+    <string name="divider_line">divider line</string>
 
 </resources>
